--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -6,7 +6,8 @@
         "preserveConstEnums": true,
         "outDir": "../build",
         "sourceMap": true,
-        "target": "es5"
+        "target": "es5",
+        "declaration": true
     },
     "include": [
         "./**/*.ts",
